# cargo-tag

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml  test.yml
src/: cargo_toml.rs  cli.rs  git.rs  lib.rs  version.rs
