[package]
name = "cargo-tag"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Cargo plugin to bump crate's versions and Git tag them for release"
keywords = ["cargo", "tag", "git", "release"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md"]
homepage = "https://github.com/EstebanBorai/cargo-tag"
documentation = "https://github.com/EstebanBorai/cargo-tag"
repository = "https://github.com/EstebanBorai/cargo-tag"
readme = "README.md"

[lib]
name = "cargo_tag"
path = "src/lib.rs"

[[bin]]
name = "cargo-tag"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
git2 = { version = "0.15.0" }
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.9"
toml_edit = "0.15.0"
