[package]
name = "cargo-tag"
version = "0.0.0"
edition = "2021"

license = "MIT"
description = "Cargo plugin to bump crate's versions and Git tag them for release"
keywords = ["cargo", "tag", "git", "release"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md"]
homepage = "https://github.com/EstebanBorai/cargo-tag"
documentation = "https://github.com/EstebanBorai/cargo-tag"
repository = "https://github.com/EstebanBorai/cargo-tag"
readme = "README.md"

[lib]
name = "cargo_tag"
path = "src/lib.rs"

[[bin]]
name = "cargo-tag"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
git2 = { version = "0.16.0" }
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
toml_edit = "0.16.2"
