[package]
name = "cargo-tag"
version = "0.1.1"
edition = "2021"

license = "MIT"
description = "Cargo plugin to bump crate's versions and Git tag them for release"
keywords = ["cargo", "tag", "git", "release"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md"]
homepage = "https://github.com/whizzes/cargo-tag"
documentation = "https://github.com/whizzes/cargo-tag"
repository = "https://github.com/whizzes/cargo-tag"
readme = "README.md"

[lib]
name = "cargo_tag"
path = "src/lib.rs"

[[bin]]
name = "cargo-tag"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
git2 = { version = "0.18.0" }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.8"
toml_edit = "0.19.10"
